# Audio-Plugins-Capstone

./: .gitignore  CMakeLists.txt  README.md
Beamforming/MATLAB/: dns_beamformer.m  eight_mic_linear.m
Beamforming/pyroomacoustics/: 3D_theatre_dns.ipynb  beamforming_alg_testing.ipynb  combined_alg.ipynb
RP Python/: Read_ADC.py  mic_test.py
array_algorithms/: beamforming_alg_testing.ipynb  delay_and_sum_2D.ipynb
array_algorithms/basic_algorithms/: beamforming_alg_testing.ipynb  combined_alg.ipynb  doa_alg_testing.ipynb
array_algorithms/design_sims/: beamformer_sel.ipynb  combined_sim.ipynb  doa_sel.ipynb  geometry_sel.ipynb  harmonic_performance.ipynb
array_algorithms/online_processing/: EndeavourRealtimeDOA.py  beamform_realytime.py  multisource_display.py  online_doa.py  realtime_beamform.py  realtime_display.py  realtime_display_bf.py
array_algorithms/physical_tests/: doa_delays.ipynb  doa_fixed.ipynb  doa_test.ipynb  file_recording.py  noise_char.ipynb  online_doa.py  physical_adaptive_beamformer.ipynb  physical_beamformer.ipynb  physical_doa.ipynb  pre_processing.ipynb  rir_finding.ipynb  subarray_beamformer.ipynb
deprecated/MATLAB/: eight_mic_circular.m  eight_mic_linear.m  sixteen_mic_linear.m
deprecated/RP Python/: Read_ADC.py  adc_test.py  led_test.py  mic_test.py
deprecated/old-cpp-plugins/: README.md
old-cpp-plugins/: CMakeLists.txt
old-cpp-plugins/plugin/include/TestPlugin/: PluginProcessor.h
old-cpp-plugins/test/source/: AudioProcessorTest.cpp
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
(+10 files in other folders)
